repo2/kubernetes/soya-repo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soya-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soya-repo
  template:
    metadata:
      name: soya-repo
      labels:
        app: soya-repo
    spec:
      containers:
      - name: soya-repo
        image: oydeu/soya-repo:latest
---
kind: Service
apiVersion: v1
metadata:
  name: soya-repo
spec:
  selector:
    app: soya-repo
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soya-repo
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - soya-beta.ownyourdata.eu
    - soya.ownyourdata.eu
    secretName: soya-repo-tls
  rules:
  - host: soya-beta.ownyourdata.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: soya-repo
            port:
              number: 80
  - host: soya.ownyourdata.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: soya-repo
            port:
              number: 80
